Initial commit of xbox eeprom security functionality based on 6.2
Pulled from https://git.code.sf.net/p/xboxhdm2/smartmontools-sec.git

Thanks to ldotsfan.

Rebased against svn trunk/git master.

--- a/smartmontools/Makefile.am
+++ b/smartmontools/Makefile.am
@@ -85,7 +85,15 @@ smartctl_SOURCES = \
         scsiprint.h \
         utility.cpp \
         utility.h \
-        sg_unaligned.h
+        sg_unaligned.h \
+        rc4.h \
+        sha1.h \
+        xboxlib.c \
+        BootHddKey.c \
+        BootEEPROM.h \
+        BootHddKey.h \
+        rc4.c \
+        sha1.c
 
 smartctl_LDADD = $(os_deps) $(os_libs)
 smartctl_DEPENDENCIES = $(os_deps)
@@ -156,7 +164,15 @@ smartd_SOURCES = \
         scsinvme.cpp \
         utility.cpp \
         utility.h \
-        sg_unaligned.h
+        sg_unaligned.h \
+        rc4.h \
+        sha1.h \
+        xboxlib.c \
+        BootHddKey.c \
+        BootEEPROM.h \
+        BootHddKey.h \
+        rc4.c \
+        sha1.c
 
 smartd_LDADD = $(os_deps) $(os_libs) $(CAPNG_LDADD) $(SYSTEMD_LDADD)
 smartd_DEPENDENCIES = $(os_deps)
